# aiops-crowd-sentiment-music-generator

./: .gitignore  .gitlint  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  justfile  pre-commit-sync.json  pyproject.toml  sonar-project.properties
.kiro/specs/crowd-sentiment-music-generator/: design.md  requirements.md  tasks.md
.kiro/steering/: code-standards.md  crowd-noise-music-generator.md  python-fastapi-guidelines.md
docs/: auto_scaling.md
k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
src/crowd_sentiment_music_generator/: main.py
src/crowd_sentiment_music_generator/api/: __init__.py  app.py
src/crowd_sentiment_music_generator/api/routers/: __init__.py  audio_analysis.py  events.py  health.py  highlights.py  music.py  override.py  preferences.py  scaling.py
src/crowd_sentiment_music_generator/config/: cache_config.py  log_config.yaml
src/crowd_sentiment_music_generator/exceptions/: __init__.py  audio_processing_error.py  data_api_error.py  export_error.py  music_generation_error.py  synchronization_error.py
src/crowd_sentiment_music_generator/log_formatter/: custom_json_logger.py
src/crowd_sentiment_music_generator/models/: __init__.py
src/crowd_sentiment_music_generator/models/data/: __init__.py  crowd_emotion.py  export_config.py  highlight_segment.py  match_event.py  system_config.py  user_preferences.py
src/crowd_sentiment_music_generator/models/music/: __init__.py  highlight_music.py  musical_parameters.py
src/crowd_sentiment_music_generator/models/sync/: sync_config.py
src/crowd_sentiment_music_generator/services/: __init__.py
src/crowd_sentiment_music_generator/services/audio_processing/: __init__.py  optimized_processor.py
src/crowd_sentiment_music_generator/services/crowd_analysis/: __init__.py  crowd_analyzer.py  emotion_classification.py  feature_extraction.py  signal_processing.py
src/crowd_sentiment_music_generator/services/data_ingestion/: __init__.py  data_points_client.py  video_feed_processor.py
src/crowd_sentiment_music_generator/services/highlight_generator/: __init__.py  export_service.py  highlight_processor.py  music_video_sync.py  optimized_export_service.py  optimized_music_video_sync.py
src/crowd_sentiment_music_generator/services/music_engine/: __init__.py  accent_triggering.py  audio_pipeline.py  continuous_evolution.py  magenta_engine.py  model_initialization.py  streaming_output.py
src/crowd_sentiment_music_generator/services/music_trigger/: __init__.py  emotion_mapping.py  event_mapping.py  music_trigger.py
src/crowd_sentiment_music_generator/services/sync_engine/: __init__.py
src/crowd_sentiment_music_generator/services/synchronization/: __init__.py  event_buffer.py  sync_engine.py
src/crowd_sentiment_music_generator/utils/: __init__.py  auto_scaling.py  cache.py  cache_init.py  error_handlers.py  error_handling.py  parallel_processing.py  resource_monitoring.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_endpoints.py  test_auto_scaling.py
tests/unit/: __init__.py  test_main.py
tests/unit/api/: __init__.py  test_health.py
tests/unit/api/routers/: __init__.py  test_audio_analysis.py  test_highlights.py  test_override.py  test_preferences.py  test_scaling.py
tests/unit/custom_log_formatter/: test_custom_json_logger.py
tests/unit/models/: test_match_event.py
tests/unit/services/audio_processing/: __init__.py  test_optimized_processor.py
tests/unit/services/crowd_analysis/: __init__.py  test_crowd_analyzer.py  test_crowd_analyzer_emotion.py  test_emotion_classification.py  test_feature_extraction.py  test_signal_processing.py
tests/unit/services/data_ingestion/: __init__.py  test_data_points_client.py  test_video_feed_processor.py
tests/unit/services/highlight_generator/: test_export_service.py  test_export_service_cache.py  test_highlight_processor.py  test_music_video_sync.py  test_optimized_export_service.py  test_optimized_music_video_sync.py
tests/unit/services/music_engine/: __init__.py  test_accent_triggering.py  test_audio_pipeline.py  test_continuous_evolution.py  test_magenta_engine.py  test_model_initialization.py  test_streaming_output.py
tests/unit/utils/: test_auto_scaling.py  test_cache.py  test_parallel_processing.py  test_resource_monitoring.py
(+7 files in other folders)
